--- a/pay/templates/admin/pay/employee/submit_line.html
+++ b/pay/templates/admin/pay/employee/submit_line.html
@@ -11,9 +11,9 @@
 {% if show_save_and_add_another %}<input type="submit" value="{% translate 'Save and add another' %}" name="_addanother">{% endif %}
 {% if show_save_and_continue %}<input type="submit" value="{% if can_change %}{% translate 'Save and continue editing' %}{% else %}{% translate 'Save and view' %}{% endif %}" name="_continue">{% endif %}
 {% if show_close %}<a href="{% url opts|admin_urlname:'changelist' %}" class="closelink">{% translate 'Close' %}</a>{% endif %}
-<!-- </div>
-<div class="submit-row">
+</div>
+<!-- <div class="submit-row">
     <a href="/admin/pay/employee/qr-code/">Generate QR Code</a>
-</div>      -->
+</div> -->
 
 {% endblock %}
