--- a/pay/templates/temp.html
+++ b/pay/templates/temp.html
@@ -36,24 +36,24 @@
   <table border="1" width="100%" cellspacing="0" cellpadding="6">
     <tr>
       <th colspan='4' style="vertical-align: middle;" class="pay">
-        <h1 style="font-size:20px;">Pay Slip For March 2022</h1>
+        <h1 style="font-size:20px;">Pay Slip For September 2022</h1>
       </th>
     </tr>
     <tr>
       <th colspan="2" style=" background-color: white;">Employee Name</th>
-      <td colspan='2'>Naveen Khandelwal</td>
+      <td colspan='2'>Rohan Sharma</td>
     </tr>
     <tr>
       <th class="pay">EmployeeId</th>
-      <td>8</td>
+      <td>18</td>
       <th class="pay">Employee Email</th>
-      <td style="width: 250px;">khandelwal.naveen0@gmail.com</td>
+      <td style="width: 250px;">abcxyz.testmail0@gmail.com</td>
     </tr>
     <tr>
       <th class="pay">Contact Number</th>
-      <td>9595223442</td>
+      <td>9730394984</td>
       <th class="pay">PAN Number</th>
-      <td>KW0122R1</td>
+      <td>ABCDE1234W</td>
     </tr>
     <tr>
       <th class="pay">Monthly Gross</th>
@@ -63,15 +63,15 @@
     </tr>
     <tr>
       <th class="pay">Days In Month</th>
-      <td>31</td>
+      <td>30</td>
       <th class="pay">Days Payable</th>
-      <td>40</td>
+      <td>11</td>
     </tr>
     <tr>
       <th class="pay">Bank Name</th>
       <td>Indian Bank</td>
       <th class="pay">Bank A/c No.</th>
-      <td>1234567891234567</td>
+      <td>12345678912345123</td>
     </tr>
     <tr>
       <th colspan='4' style="background-color: white;"><h1></h1></th>
@@ -90,7 +90,7 @@
     </tr>
     <tr>
       <th class="pay">House Rent Allowences</th>
-      <td style="text-align: right;">8000</td>
+      <td style="text-align: right;">5000</td>
       <th class="pay">Professional Tax</th>
       <td style="text-align: right;">200</td>
     </tr>
@@ -101,7 +101,7 @@
     </tr>
     <tr>
       <th class="pay">Other Allowances</th>
-      <td style="text-align: right;">5000</td>
+      <td style="text-align: right;">8000</td>
       <th style="text-align: right;background-color: white;"><th style="text-align: right;background-color: white; color: white;">h</th></th>
     </tr>
     <tr>
@@ -111,7 +111,7 @@
     </tr>
     <tr>
       <th style="text-align: right;" class="pay">NET PAY</th>
-      <td colspan="3" style="text-align: middle;">61316</td>
+      <td colspan="3" style="text-align: middle;">15133</td>
     </tr>
   </table>
 </body>
