--- a/pay/templates/admin/pay/attendance/change_list.html
+++ b/pay/templates/admin/pay/attendance/change_list.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<a href="upload-csv/" style="margin-left: 200px;">Upload Attendance CSV File</a>
-<a href="scan-qr/" style="margin-left: 200px;">Scan QR Code</a>
+<a href="upload-csv/" style="margin-left: 10px;">Upload Attendance CSV File</a><br><br>
+<a href="scan-qr/" style="margin-left: 10px;">Scan QR Code</a>
 
 {{block.super}}
 {% endblock %}
