--- a/pay/templates/temp.html
+++ b/pay/templates/temp.html
@@ -36,42 +36,42 @@
   <table border="1" width="100%" cellspacing="0" cellpadding="6">
     <tr>
       <th colspan='4' style="vertical-align: middle;" class="pay">
-        <h1 style="font-size:20px;">Pay Slip For September 2022</h1>
+        <h1 style="font-size:20px;">Pay Slip For July 2022</h1>
       </th>
     </tr>
     <tr>
       <th colspan="2" style=" background-color: white;">Employee Name</th>
-      <td colspan='2'>Rohan Sharma</td>
+      <td colspan='2'>Bhavesh Khandelwal</td>
     </tr>
     <tr>
       <th class="pay">EmployeeId</th>
-      <td>18</td>
+      <td>20</td>
       <th class="pay">Employee Email</th>
-      <td style="width: 250px;">abcxyz.testmail0@gmail.com</td>
+      <td style="width: 250px;">khandelwal.bhavesh0@gmail.com</td>
     </tr>
     <tr>
       <th class="pay">Contact Number</th>
-      <td>9730394984</td>
+      <td>9370075813</td>
       <th class="pay">PAN Number</th>
-      <td>ABCDE1234W</td>
+      <td>ABCDE1234R</td>
     </tr>
     <tr>
       <th class="pay">Monthly Gross</th>
-      <td>50000</td>
+      <td>83000</td>
       <th class="pay">Monthly Basic</th>
-      <td>25000</td>
+      <td>60000</td>
     </tr>
     <tr>
       <th class="pay">Days In Month</th>
-      <td>30</td>
+      <td>31</td>
       <th class="pay">Days Payable</th>
-      <td>11</td>
+      <td>20</td>
     </tr>
     <tr>
       <th class="pay">Bank Name</th>
-      <td>Indian Bank</td>
+      <td>SBI</td>
       <th class="pay">Bank A/c No.</th>
-      <td>12345678912345123</td>
+      <td>7654321987654321</td>
     </tr>
     <tr>
       <th colspan='4' style="background-color: white;"><h1></h1></th>
@@ -84,34 +84,34 @@
     </tr>
     <tr>
       <th class="pay">Base</th>
-      <td style="text-align: right;">25000</td>
+      <td style="text-align: right;">60000</td>
       <th class="pay">Provident Fund</th>
-      <td style="text-align: right">3000</td>
+      <td style="text-align: right">7200</td>
     </tr>
     <tr>
       <th class="pay">House Rent Allowences</th>
-      <td style="text-align: right;">5000</td>
+      <td style="text-align: right;">9000</td>
       <th class="pay">Professional Tax</th>
       <td style="text-align: right;">200</td>
     </tr>
     <tr>
       <th class="pay">Conveyance Allowences</th>
-      <td style="text-align: right;">12000</td>
+      <td style="text-align: right;">10000</td>
       <th style="text-align: right;background-color: white;"><th style="text-align: right;background-color: white;color: white;">Totals</th></th>
     </tr>
     <tr>
       <th class="pay">Other Allowances</th>
-      <td style="text-align: right;">8000</td>
+      <td style="text-align: right;">4000</td>
       <th style="text-align: right;background-color: white;"><th style="text-align: right;background-color: white; color: white;">h</th></th>
     </tr>
     <tr>
       <th style="text-align: right;" class="pay">Totals</th>
-      <td style="text-align: right;">50000</td>
-      <th style="text-align: right;background-color: white;"><th style="text-align: right;background-color: white;">3200</th></th>
+      <td style="text-align: right;">83000</td>
+      <th style="text-align: right;background-color: white;"><th style="text-align: right;background-color: white;">7400</th></th>
     </tr>
     <tr>
       <th style="text-align: right;" class="pay">NET PAY</th>
-      <td colspan="3" style="text-align: middle;">15133</td>
+      <td colspan="3" style="text-align: middle;">46148</td>
     </tr>
   </table>
 </body>
